[tool.poetry]
name = "fastapi-toolhub-oauth"
version = "0.1.0"
description = ""
authors = ["Slavina Stefanova <sstefanova@wikimedia.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.1"}
httpx = "^0.27.2"
itsdangerous = "^2.2.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
